--- a/exercicios/ex025/form008.html
+++ b/exercicios/ex025/form008.html
@@ -15,7 +15,7 @@
         
         <p>
             <label for="inum2">Número 2: </label>
-            <input type="number" name="num2" id="inum2" min="0" max="50" required oninput="isoma.innerHTML = Number(inum.value) + Number(inum2.value)"">
+            <input type="number" name="num2" id="inum2" min="0" max="50" required oninput="isoma.innerHTML = Number(inum.value) + Number(inum2.value)">
         </p>
         <p>
             <label for="isoma">Soma: </label>
